Fix the position of the X to remove an email domain on firefox.

--- a/scss/partials/_org_settings_main_panel.scss
+++ b/scss/partials/_org_settings_main_panel.scss
@@ -120,6 +120,7 @@ div.org-settings div.org-settings-inner div.org-settings-main {
           background-size: 8px 8px;
           background-position: 6px 10px;
           background-repeat: no-repeat;
+          display: block;
         }
       }
     }
